--- a/src/style/grid/index.css
+++ b/src/style/grid/index.css
@@ -1,3 +1,18 @@
 body {
     display: grid;
+    grid-template-areas: 
+    "aside header"
+    "aside main";
+}
+
+.cabecera {
+    grid-area: header;
+}
+
+.menu-lateral {
+    grid-area: aside;
+}
+
+.principal {
+    grid-area: main;
 }
